--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "coc": ">= 0.0.30"
   },
   "scripts": {
-    "clean": "rimraf lib",
+    "watch": "webpack --watch",
     "build": "tsc -p tsconfig.json",
-    "prepare": "npx npm-run-all clean build"
+    "prepare": "webpack"
   },
   "activationEvents": [
     "*"
@@ -209,20 +209,21 @@
     "@chemzqm/tslint-config": "^1.0.18",
     "@types/node": "^12.0.2",
     "coc.nvim": "^0.0.67",
+    "ignore": "^5.1.1",
     "rimraf": "^2.6.3",
+    "ts-loader": "^6.0.2",
+    "tslib": "^1.9.3",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.4"
+    "typescript": "^3.4.4",
+    "vscode-languageserver-protocol": "^3.15.0-next.5",
+    "resolve-from": "^5.0.0",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {
-    "ignore": "^5.1.1",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "prettier-stylelint": "^0.4.2",
-    "prettier-tslint": "^0.4.2",
-    "read-pkg-up": "^4.0.0",
-    "resolve": "^1.10.1",
-    "tslib": "^1.9.3",
-    "vscode-languageserver-protocol": "^3.15.0-next.5",
-    "vscode-uri": "^1.0.6"
+    "prettier-tslint": "^0.4.2"
   }
 }
