--- a/package.json
+++ b/package.json
@@ -208,15 +208,17 @@
     "@chemzqm/tsconfig": "^0.0.3",
     "@chemzqm/tslint-config": "^1.0.18",
     "@types/node": "^12.0.2",
+    "@types/semver": "^6.0.1",
     "coc.nvim": "^0.0.67",
     "ignore": "^5.1.1",
+    "resolve-from": "^5.0.0",
     "rimraf": "^2.6.3",
+    "semver": "^6.1.2",
     "ts-loader": "^6.0.2",
     "tslib": "^1.9.3",
     "tslint": "^5.16.0",
     "typescript": "^3.4.4",
     "vscode-languageserver-protocol": "^3.15.0-next.5",
-    "resolve-from": "^5.0.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   },
