--- a/package.json
+++ b/package.json
@@ -64,6 +64,12 @@
           "description": "Require a 'prettierconfig' to format",
           "scope": "resource"
         },
+        "prettier.onlyUseLocalVersion": {
+          "type": "boolean",
+          "default": false,
+          "description": "Only use the version of prettier installed by the client, ignoring the version bundled with coc-prettier",
+          "scope": "resource"
+        },
         "prettier.statusItemText": {
           "type": "string",
           "default": "Prettier",
@@ -184,12 +190,6 @@
           "default": "avoid",
           "description": "Include parentheses around a sole arrow function parameter",
           "scope": "resource"
-        },
-        "prettier.onlyUseLocalVersion": {
-          "type": "boolean",
-          "default": false,
-          "description": "Only use the version of prettier installed by the client, ignoring the version bundled with coc-prettier",
-          "scope": "resource"
         }
       }
     },
@@ -214,7 +214,6 @@
     "@chemzqm/tsconfig": "^0.0.3",
     "@chemzqm/tslint-config": "^1.0.18",
     "@types/node": "^12.0.2",
-    "@types/read-pkg-up": "^3.0.1",
     "@types/semver": "^6.0.1",
     "coc.nvim": "^0.0.67",
     "ignore": "^5.1.1",
@@ -233,7 +232,6 @@
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "prettier-stylelint": "^0.4.2",
-    "prettier-tslint": "^0.4.2",
-    "read-pkg-up": "^6.0.0"
+    "prettier-tslint": "^0.4.2"
   }
 }
