--- a/package.json
+++ b/package.json
@@ -223,20 +223,20 @@
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
     "@chemzqm/tslint-config": "^1.0.18",
-    "@types/node": "^12.7.5",
-    "@types/semver": "^6.0.2",
-    "coc.nvim": "^0.0.73",
+    "@types/node": "^13.11.0",
+    "@types/semver": "^7.1.0",
+    "coc.nvim": "^0.0.77",
     "ignore": "^5.1.4",
     "resolve-from": "^5.0.0",
-    "rimraf": "^3.0.0",
-    "semver": "^6.3.0",
-    "ts-loader": "^6.1.0",
-    "tslib": "^1.10.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "vscode-languageserver-protocol": "^3.15.0-next.5",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.8"
+    "rimraf": "^3.0.2",
+    "semver": "^7.1.3",
+    "ts-loader": "^6.2.2",
+    "tslib": "^1.11.1",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3",
+    "vscode-languageserver-protocol": "^3.15.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "prettier": "^2.0.2",
