--- a/package.json
+++ b/package.json
@@ -224,14 +224,13 @@
     "@chemzqm/tsconfig": "^0.0.3",
     "@types/node": "^14.14.5",
     "@types/semver": "^7.3.4",
-    "coc.nvim": "^0.0.79",
+    "coc.nvim": "^0.0.79-next.11",
     "ignore": "^5.1.8",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.2",
     "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "vscode-languageserver-protocol": "^3.15.3",
+    "typescript": "^4.1.3",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0"
   },
