--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "coc": ">= 0.0.30"
   },
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "tsc -p tsconfig.json",
-    "prepare": "webpack"
+    "prepare": "node esbuild.js"
   },
   "activationEvents": [
     "*"
@@ -225,14 +223,13 @@
     "@types/node": "^14.14.5",
     "@types/semver": "^7.3.4",
     "coc.nvim": "^0.0.79-next.11",
+    "esbuild": "^0.8.50",
     "ignore": "^5.1.8",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.2",
     "ts-loader": "^8.0.7",
-    "typescript": "^4.1.3",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "core-js": "^3.6.5",
