--- a/package.json
+++ b/package.json
@@ -220,21 +220,20 @@
   "license": "MIT",
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
-    "@types/node": "^14.14.5",
+    "@types/node": "^14.14.31",
     "@types/semver": "^7.3.4",
-    "coc.nvim": "^0.0.79-next.11",
-    "esbuild": "^0.8.50",
+    "coc.nvim": "^0.0.80",
+    "esbuild": "^0.8.54",
     "ignore": "^5.1.8",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
-    "semver": "^7.3.2",
-    "ts-loader": "^8.0.7",
-    "typescript": "^4.1.3"
+    "semver": "^7.3.4",
+    "typescript": "^4.2.2"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0",
+    "core-js": "^3.9.1",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "prettier-stylelint": "^0.4.2",
     "prettier-tslint": "^0.4.2"
   }
