Upgrade code from prettier-vscode@9.2.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": false,
-    "lib": ["es2018"],
+    "lib": ["ES2020"],
     "plugins": []
   },
   "include": ["src"],
