--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coc-prettier",
-  "version": "1.1.25",
+  "version": "9.2.0",
   "description": "prettier extension for coc.nvim",
   "main": "lib/index.js",
   "publisher": "chemzqm",
@@ -9,7 +9,14 @@
     "prettier"
   ],
   "engines": {
-    "coc": ">= 0.0.30"
+    "coc": ">= 0.0.80"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neoclide/coc-prettier.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neoclide/coc-prettier/issues"
   },
   "scripts": {
     "prepare": "node esbuild.js"
@@ -32,46 +39,81 @@
           "items": {
             "type": "string"
           },
-          "default": [
-            "vue"
-          ],
+          "default": [],
           "description": "A list of languages IDs to disable this extension on",
           "scope": "window"
         },
-        "prettier.eslintIntegration": {
-          "type": "boolean",
-          "default": false,
-          "description": "Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.",
-          "scope": "resource"
+        "prettier.documentSelectors": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [],
+          "markdownDescription": "A list of [glob patterns](https://code.visualstudio.com/api/references/vscode-api#GlobPattern) to register Prettier formatter",
+          "scope": "window"
         },
-        "prettier.tslintIntegration": {
+        "prettier.enable": {
           "type": "boolean",
-          "default": false,
-          "description": "Use 'prettier-tslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from tslint rules.",
-          "scope": "resource"
-        },
-        "prettier.stylelintIntegration": {
-          "type": "boolean",
-          "default": false,
-          "description": "Use 'prettier-stylelint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from stylelint rules.",
+          "default": true,
+          "markdownDescription": "Controls whether prettier is enabled or not.",
           "scope": "resource"
         },
         "prettier.requireConfig": {
           "type": "boolean",
           "default": false,
-          "description": "Require a 'prettierconfig' to format",
+          "markdownDescription": "Require a prettier configuration file to format. See [documentation for valid configuration files](https://prettier.io/docs/en/configuration.html).\n\n> _Note, untitled files will still be formatted using the coc-prettier settings even when this setting is set._",
+          "scope": "resource"
+        },
+        "prettier.resolveGlobalModules": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "When enabled, this extension will attempt to use global npm or yarn modules if local modules cannot be resolved.\n> _This setting can have a negative performance impact, particularly on Windows when you have attached network drives. Only enable this if you must use global modules._",
+          "scope": "resource"
+        },
+        "prettier.withNodeModules": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "If true, this extension will process files in node_modules",
+          "scope": "resource"
+        },
+        "prettier.packageManager": {
+          "scope": "resource",
+          "type": "string",
+          "enum": [
+            "npm",
+            "yarn",
+            "pnpm"
+          ],
+          "default": "npm",
+          "deprecationMessage": "Package manager is now automatically detected by coc-prettier. This setting is no longer used.",
+          "markdownDescription": "The package manager you use to install node modules."
+        },
+        "prettier.useEditorConfig": {
+          "type": "boolean",
+          "default": true,
+          "markdownDescription": "Whether or not to take `.editorconfig` into account when parsing configuration. See the [prettier.resolveConfig](https://prettier.io/docs/en/api.html) docs for details.",
+          "scope": "resource"
+        },
+        "prettier.prettierPath": {
+          "type": "string",
+          "markdownDescription": "Path to the prettier module",
+          "scope": "resource"
+        },
+        "prettier.configPath": {
+          "type": "string",
+          "markdownDescription": "Path to the prettier configuration file",
+          "scope": "resource"
+        },
+        "prettier.enableDebugLogs": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "Enable debug logs for troubleshooting.",
           "scope": "resource"
         },
         "prettier.onlyUseLocalVersion": {
           "type": "boolean",
           "default": false,
           "description": "Only use the version of prettier installed by the client, ignoring the version bundled with coc-prettier",
-          "scope": "resource"
-        },
-        "prettier.disableSuccessMessage": {
-          "type": "boolean",
-          "default": false,
-          "description": "Disable the 'Formatted by prettier' message which is echoed every time a file is successfully formatted",
           "scope": "resource"
         },
         "prettier.statusItemText": {
@@ -126,6 +168,12 @@
           "default": false,
           "description": "Use single quotes instead of double quotes in JSX"
         },
+        "prettier.jsxBracketSameLine": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "If true, puts the `>` of a multi-line jsx element at the end of the last line instead of being alone on the next line",
+          "scope": "resource"
+        },
         "prettier.htmlWhitespaceSensitivity": {
           "type": "string",
           "enum": [
@@ -135,6 +183,12 @@
           ],
           "default": "css",
           "description": "Specify the global whitespace sensitivity for HTML files.\n Valid options: \n'css' - Respect the default value of CSS display property. \n'strict' - Whitespaces are considered sensitive. \n'ignore' - Whitespaces are considered insensitive."
+        },
+        "prettier.vueIndentScriptAndStyle": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "Whether or not to indent the code inside `<script>` and `<style>` tags in Vue files. Some people (like the creator of Vue) don’t indent to save an indentation level, but this might break code folding in your editor.",
+          "scope": "resource"
         },
         "prettier.endOfLine": {
           "type": "string",
@@ -147,24 +201,22 @@
           "default": "lf",
           "description": "Specify the end of line used by prettier"
         },
-        "prettier.parser": {
-          "type": "string",
-          "enum": [
-            "none",
-            "babel",
-            "babel-flow",
-            "babel-ts",
-            "flow",
-            "typescript"
-          ],
-          "default": "none",
-          "description": "Override the parser. You shouldn't have to change this setting.",
-          "scope": "resource"
-        },
         "prettier.semi": {
           "type": "boolean",
           "default": true,
           "description": "Whether to add a semicolon at the end of every line",
+          "scope": "resource"
+        },
+        "prettier.requirePragma": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "Prettier can restrict itself to only format files that contain a special comment, called a pragma, at the top of the file. This is very useful when gradually transitioning large, unformatted codebases to prettier.",
+          "scope": "resource"
+        },
+        "prettier.insertPragma": {
+          "type": "boolean",
+          "default": false,
+          "markdownDescription": "Prettier can insert a special @format marker at the top of files specifying that the file has been formatted with prettier. This works well when used in tandem with the `--require-pragma` option. If there is already a docblock at the top of the file then this option will add a newline to it with the @format marker.",
           "scope": "resource"
         },
         "prettier.useTabs": {
@@ -192,6 +244,27 @@
           "default": "always",
           "description": "Include parentheses around a sole arrow function parameter",
           "scope": "resource"
+        },
+        "prettier.quoteProps": {
+          "type": "string",
+          "enum": [
+            "as-needed",
+            "consistent",
+            "preserve"
+          ],
+          "default": "as-needed",
+          "markdownDescription": "Change when properties in objects are quoted",
+          "scope": "resource"
+        },
+        "prettier.embeddedLanguageFormatting": {
+          "type": "string",
+          "enum": [
+            "auto",
+            "off"
+          ],
+          "default": "auto",
+          "markdownDescription": "Control whether Prettier formats quoted code embedded in the file.",
+          "scope": "resource"
         }
       }
     },
@@ -208,27 +281,35 @@
         "fileMatch": "package.json",
         "url": "./package-json-schema.json"
       }
+    ],
+    "commands": [
+      {
+        "command": "prettier.createConfigFile",
+        "title": "Prettier: Create Configuration File"
+      },
+      {
+        "command": "prettier.forceFormatDocument",
+        "title": "Format Document (Forced)"
+      }
     ]
   },
   "author": "chemzqm@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
-    "@types/node": "^14.14.31",
+    "@types/node": "12.12.0",
     "@types/semver": "^7.3.4",
-    "coc.nvim": "^0.0.80",
+    "coc.nvim": "^0.0.81-next.16",
     "esbuild": "^0.8.54",
+    "find-up": "5.0.0",
     "ignore": "^5.1.8",
+    "resolve": "^1.21.0",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
-    "semver": "^7.3.4",
+    "semver": "^7.3.5",
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "core-js": "^3.9.1",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
-    "prettier-stylelint": "^0.4.2",
-    "prettier-tslint": "^0.4.2"
+    "prettier": "^2.5.1"
   }
 }
