--- a/package.json
+++ b/package.json
@@ -298,15 +298,15 @@
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
     "@types/node": "12.12.0",
-    "@types/semver": "^7.3.4",
+    "@types/semver": "^7.3.9",
     "coc.nvim": "^0.0.81-next.20",
-    "esbuild": "^0.8.54",
-    "find-up": "5.0.0",
-    "ignore": "^5.1.8",
-    "resolve": "^1.21.0",
+    "esbuild": "^0.14.38",
+    "find-up": "^5.0.0",
+    "ignore": "^5.2.0",
+    "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
-    "semver": "^7.3.5",
-    "typescript": "^4.6.3"
+    "semver": "^7.3.7",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "prettier": "^2.6.2"
