--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
           "default": false,
           "description": "Use single quotes instead of double quotes in JSX"
         },
-        "prettier.jsxBracketSameLine": {
+        "prettier.bracketSameLine": {
           "type": "boolean",
           "default": false,
           "markdownDescription": "If true, puts the `>` of a multi-line jsx element at the end of the last line instead of being alone on the next line",
