--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
             "es5",
             "all"
           ],
-          "default": "es5",
+          "default": "all",
           "description": "Controls the printing of trailing commas wherever possible.\n Valid options:\n    'none' - No trailing commas\n    'es5' - Trailing commas where valid in ES5 (objects, arrays, etc)\n    'all' - Trailing commas wherever possible (function arguments)",
           "scope": "resource"
         },
